@startuml
class Main {
+ String url
- String address
- String port
- String database
+ String username
- String password
+ {static} boolean processInput(String,Main)
+ {static} String prompt(String)
+ {static} boolean TFPrompt(String)
+ {static} Double NumPrompt(String)
+ {static} boolean isValidEmployeeId(Connection,String)
+ {static} void main(String[])
- void generateURL()
+ String getAddress()
+ void setAddress(String)
+ String getPort()
+ void setPort(String)
+ String getDatabase()
+ void setDatabase(String)
+ String getPassword()
+ boolean checkPassword(String)
+ String getResource(String)
+ {static} void processArg(String,String[],Main)
}


class RequestReport {
+ void empInfoReport(boolean,String,String)
+ void titlePayReport(boolean,String,String,boolean,String)
+ void divPayReport(boolean,String,String,boolean,String)
}

class Request {
+ boolean closed
# String sqlScript
# Connection connection
+ ResultSet query(String)
+ void close()
}


class RequestSorter {
+ void searchEmp()
}

class RequestManage {
+ void addEmp()
+ void deleteEmp()
+ void updateEmp()
+ void rewriteTable()
+ void resetDatabase()
+ void updateSalary()
}



Request <|-- RequestReport
Request <|-- RequestSorter
Request <|-- RequestManage
@enduml